--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   after_layout: ^1.2.0
   hive: ^2.0.4
   google_maps_flutter: ^2.2.0
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
